2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/pc/biosdisk.h (grub_biosdisk_drp): Fix device_path
	length.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of build-time grub-bin2h and grub-mkfont when doing
	full Canadian cross. Tested with build=x86_64, host=arm,
	target=ppc-ieee1275.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Error if no $BUILD_CC could be found.
	Reported by: DevHC.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/coreboot/init.c: Fix compilation on
	i386-multiboot.

2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/vga_init.c: Fix compilation on qemu-mips.
	* grub-core/kern/mips/qemu_mips/init.c: Likewise.

2013-08-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/getroot.c (grub_util_biosdisk_get_grub_dev): Zero out
	grub_errno in the case where we handle GRUB_ERR_UNKNOWN_DEVICE by
	falling back to the partition device, otherwise a later call to this
	function may fail spuriously.
	Reported by Axel Beckert.  Fixes Debian bug #708614.

2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* autogen.sh: Replace find -not by the POSIX-compliant find !.

2013-08-12  Grégoire Sutre  <gregoire.sutre@gmail.com>

	Prevent shadowing of stdlib's devname(3) on BSD.

	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Rename devname
	and devlast to diskname and disklast, respectively.

2013-08-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Fix detection of Emacs autosave files.

2013-08-08  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* docs/grub.texi: Introduce terminal window position options:
	terminal-left: terminal window's left position
	terminal-top: terminal window's top position
	terminal-width: terminal window's width
	terminal-height: terminal window's height
	terminal-border: terminal window's border width
	* grub-core/gfxmenu/theme-loader.c: Likewise.