@@ -1,5 +1,12 @@
 2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/emu/misc.c (grub_device_mapper_supported): Move from
+	here ...
+	* grub-core/kern/emu/hostdisk.c (grub_device_mapper_supported): ... to
+	here.
+
+2013-08-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/i386/pc/biosdisk.h (grub_biosdisk_drp): Fix device_path
 	length.
 
